# debian-package-statistic

./: README.md  content_file_test.txt  package_statistic.py  package_statistic_test.py  pyproject.toml
