[tool.poetry]
name = "cli_package_statistics"
version = "0.1.0"
description = "Parse Contents file and return the top 10 packages"
authors = ["Pierre Valentin <pro@pierrevalentin.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
pylint = "^2.5.2"
pdbpp = "^0.10.2"
pytest = "^5.4.2"
pytest_mock = "^3.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
